--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'org.mongodb:mongodb-driver:3.2.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
